# madrigal

./: AUTHORS  CMakeLists.txt  INSTALL  README.md  TODO  app.desktop.cmake  config.h.cmake
.github/workflows/: release.yaml
core/: actions.cpp  actions.h  configuration.cpp  configuration.h  debug.cpp  debug.h  globalstatic.h  images.cpp  images.h  lyrics.cpp  lyrics.h  main.cpp  mediakeys.cpp  mediakeys.h  monoicon.cpp  monoicon.h  networkaccessmanager.cpp  networkaccessmanager.h  notificationmanager.cpp  notificationmanager.h  roles.h  thread.cpp  thread.h  utils.cpp  utils.h
dbus/: app.xml.cmake  gnomemediakeys.cpp  gnomemediakeys.h  mpris.cpp  mpris.h  notify.cpp  notify.h
icons/: CMakeLists.txt  CMakeLists.txt~  createicon.sh  icons.qrc  index.theme
mac/: app.icns  createicon.sh  notification.h  notification.mm  notify.cpp  notify.h  osxstyle.cpp  osxstyle.h  windowmanager.cpp  windowmanager.h
mac/dmg/: background.xcf  create-dmg.sh.in
scripts/: install-qt.sh
ui/: action.cpp  action.h  actioncollection.cpp  actioncollection.h  albuminfo.cpp  albuminfo.h  animatedicon.cpp  animatedicon.h  application_dbus.cpp  application_dbus.h  application_single.cpp  application_single.h  basicitemdelegate.cpp  basicitemdelegate.h  coverwidget.cpp  coverwidget.h  flattoolbutton.cpp  flattoolbutton.h  groupeditemdelegate.cpp  groupeditemdelegate.h  gtkproxystyle.cpp  gtkproxystyle.h  gtkstyle.cpp  gtkstyle.h  libraryview.cpp  libraryview.h  listitemdelegate.cpp  listitemdelegate.h  listview.cpp  listview.h  lyricsview.cpp  lyricsview.h  mainwindow.cpp  mainwindow.h  menubutton.cpp  menubutton.h  navbutton.cpp  navbutton.h  notification.cpp  notification.h  (+28 more)
ui/themes/: adwaita.css  ambiance.css  elementary.css  faience.css  mint-x.css  radiance.css
upnp/: command.h  device.cpp  device.h  devicesmodel.cpp  devicesmodel.h  httpconnection.cpp  httpconnection.h  httpserver.cpp  httpserver.h  localplaylists.cpp  localplaylists.h  mapping  mediaserver.cpp  mediaserver.h  mediaservers.cpp  mediaservers.h  model.cpp  model.h  ohrenderer.cpp  ohrenderer.h  renderer.cpp  renderer.h  renderers.cpp  renderers.h  ssdp.cpp  ssdp.h
windows/: CMakeLists.txt  app.nsi.cmake  appico.rc  createicon.sh
